<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="600sp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="600sp"
        android:id = "@+id/add_edit_container"
        tools:ignore="InvalidId,MissingConstraints" />

    <EditText
        android:id="@+id/add_item_name"
        android:layout_width="250sp"
        android:layout_height="50sp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="5dp"
        android:hint="Item name"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/add_item_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_item_date"
        android:layout_width="250sp"
        android:layout_height="50sp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="5dp"
        android:textSize="18sp"
        android:ems="10"
        android:hint="date of purchase"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/add_item_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_item_name" />

    <EditText
        android:id="@+id/add_item_description"
        android:layout_width="251dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="2dp"
        android:hint="brief description"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/add_item_make"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_item_date" />

    <EditText
        android:id="@+id/add_item_make"
        android:layout_width="250sp"
        android:layout_height="50sp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="3dp"
        android:hint="make"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/add_item_model"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_item_description" />

    <EditText
        android:id="@+id/add_item_model"
        android:layout_width="250sp"
        android:layout_height="50sp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="5dp"
        android:hint="model"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/add_item_serial_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_item_make" />

    <EditText
        android:id="@+id/add_item_serial_number"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:hint="serial number"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/add_item_price"
        app:layout_constraintEnd_toStartOf="@+id/scan_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_item_model" />

    <EditText
        android:id="@+id/add_item_price"
        android:layout_width="250sp"
        android:layout_height="50sp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:textSize="18sp"
        android:hint="estimated value"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/add_item_comment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_item_serial_number" />

    <EditText
        android:id="@+id/add_item_comment"
        android:layout_width="250sp"
        android:layout_height="50sp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:textSize="18sp"
        android:hint="comment"
        app:layout_constraintBottom_toTopOf="@+id/add_item_tag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_item_price" />

    <TextView
        android:id="@+id/add_item_tag"
        android:layout_width="250sp"
        android:layout_height="30sp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        android:hint='  Search for tag'
        android:drawableStart="@drawable/search_icon"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_item_comment" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/scan_button"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="11dp"
        android:drawableTop="@drawable/baseline_qr_code_scanner_24"
        app:layout_constraintBottom_toTopOf="@+id/add_item_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_item_serial_number"
        app:layout_constraintTop_toBottomOf="@+id/add_item_model"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>