<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ItemListActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/items_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/blue"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:text="@string/my_items_title"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:autoSizeTextType="uniform"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/sort_filter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="Sort/Filter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/logout_button"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Logout Button -->
        <Button
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="16dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/item_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/items_nav_bar" />

    <RelativeLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/transparent">

        <RelativeLayout
            android:id="@+id/total_box"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginStart="105dp"
            android:background="@drawable/rounded_corners"
            android:orientation="vertical"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/total_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="Total"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/total_title"
                android:layout_centerHorizontal="true"
                android:text="$0.00"
                android:textSize="30dp" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_item_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="35dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="12dp"
            android:layout_toEndOf="@+id/total_box"
            android:background="@drawable/add_button_rounded_corners"
            android:clickable="true"
            android:focusable="true"
            android:text="+"
            android:textColor="@color/white"
            android:textColorHighlight="@color/blue"
            android:textSize="20sp"
            app:rippleColor="@color/blue"
            app:srcCompat="@android:drawable/ic_input_add" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delete_item_button"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="14dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/garbage_bin_icon"
            android:clickable="true"
            android:focusable="true"
            android:textSize="20sp"
            app:rippleColor="@color/blue" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

