<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- Toggle Buttons -->
        <LinearLayout
            android:id="@+id/toggleButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Login"
            android:onClick="onLoginClicked"/>
        <Button
            android:id="@+id/buttonSignup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Sign up"
            android:onClick="onSignupClicked"/>
        </LinearLayout>

        <!-- Login Form Layout -->
        <LinearLayout
            android:id="@+id/layoutLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible"
            android:layout_below="@id/toggleButtons">

            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/buttonLoginSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="SIGN IN"
                android:onClick="onLoginSubmitClicked"/>

            <Button
                android:id="@+id/buttonLoginCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="CANCEL"
                android:onClick="onCancelClicked"/>
        </LinearLayout>

        <!-- Signup Form Layout -->
        <LinearLayout
            android:id="@+id/layoutSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_below="@id/toggleButtons"
            android:layout_marginTop="20dp"
            tools:ignore="ExtraText">

            <EditText
                android:id="@+id/signupFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="First Name"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/signupLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Last Name"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/signupDateOfBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Date of Birth"
                android:focusable="false"
                android:clickable="true"
                android:onClick="onDateOfBirthClicked"
                android:inputType="none"/>

            <EditText
                android:id="@+id/signupUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username"/>

            <EditText
                android:id="@+id/signupEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/signupCreatePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Create Password"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/signupRepeatPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Repeat Password"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/buttonSignupSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="CREATE ACCOUNT"
                android:onClick="onSignupSubmitClicked"/>

            <Button
                android:id="@+id/buttonSignupCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="CANCEL"
                android:onClick="onCancelClicked"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
